--- a/src/index.scss
+++ b/src/index.scss
@@ -55,7 +55,7 @@ img {
 }
 
 .wrapper {
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   position: relative;
