--- a/src/style/index.css
+++ b/src/style/index.css
@@ -49,7 +49,7 @@ img {
 }
 
 .wrapper {
-  min-height: 100%;
+  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
